diesel_compile_tests/tests/fail/derive_deprecated/deprecated_postgres_type.stderr
error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`
 --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:6:3
  |
LL | #[postgres]
  |   ^^^^^^^^

error: expected `oid` and `array_oid` attribute or `name` attribute
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:11:11
   |
LL | #[postgres()]
   |           ^^

error: expected parentheses
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:16:12
   |
LL | #[postgres = "foo"]
   |            ^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:21:12
   |
LL | #[postgres(type_name)]
   |            ^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:26:21
   |
LL | #[postgres(type_name())]
   |                     ^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:31:24
   |
LL | #[postgres(type_name = 1)]
   |                        ^

error: unexpected `oid` when `name` is present
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:36:31
   |
LL | #[postgres(type_name = "foo", oid = "2", array_oid = "3")]
   |                               ^^^

error: unexpected `array_oid` when `name` is present
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:41:31
   |
LL | #[postgres(type_name = "foo", array_oid = "3")]
   |                               ^^^^^^^^^

error: expected `oid` and `array_oid` attribute or `name` attribute
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:46:11
   |
LL | #[postgres(oid = "2")]
   |           ^^^^^^^^^^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:51:18
   |
LL | #[postgres(oid = 1, array_oid = "1")]
   |                  ^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:56:35
   |
LL | #[postgres(oid = "1", array_oid = 1)]
   |                                   ^

warning: #[postgres] attribute form is deprecated
  = help: use `#[diesel(postgres_type(oid = 1, array_oid = 1))]` instead

error: unknown attribute, expected one of `oid`, `array_oid`, `type_name`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:65:12
   |
LL | #[postgres(what)]
   |            ^^^^
